# python-api-boilerplate

./: .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  pyproject.toml
.agents/skills/create-doc/: SKILL.md
.agents/skills/kanban-board/: SKILL.md
.agents/skills/repo-status/: SKILL.md
.github/workflows/: app.yml
docs/: code-style.md  documentation-guidelines.md
docs/backend/: clean-architecture.md
docs/testing/: test-doubles.md  test-structure.md
scripts/: generate-claude-symlinks.sh  generate-cursor-symlinks.sh  local-setup.sh
scripts/hooks/: pre-commit
src/domain/: command.py
src/use_cases/: health_command.py  say_hello_command.py
tests/unit/acceptance/delivery/api/: test_hello_controller.py
tests/unit/use_cases/: test_say_hello_command.py
