[project]
name = "fastapi-boilerplate"
version = "0.1.0"
description = "This repository is a FastAPI boilerplate to use as a fast starter point"
authors = [
  { name = "Carlos Herrera", email = "cmarioherrera@gmail.com" }
]
requires-python = "==3.14.4"
readme = "README.md"
license = "MIT"
dependencies = [
    "fastapi[standard]>=0.136.3,<0.137",
    "pydantic-settings>=2.14.1,<3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-watch>=4.2.0,<5",
    "expects>=0.9.0,<0.10",
    "doublex>=1.9.6.1,<2",
    "coverage>=7.14.0,<8",
    "ruff>=0.15.14,<0.16",
    "ty>=0.0.39",
]


[tool.uv]
default-groups = ["dev"]
